[gd_scene load_steps=5 format=3 uid="uid://j1ojp1ske4qa"]

[ext_resource type="PackedScene" uid="uid://b75xo0iagkxcy" path="res://scenes/turret/turret.tscn" id="1_1khyv"]
[ext_resource type="PackedScene" uid="uid://bh8db1tewsumy" path="res://scenes/levels/level_1.tscn" id="1_78gus"]
[ext_resource type="Script" path="res://scenes/main/main.gd" id="1_leve3"]
[ext_resource type="Script" path="res://scenes/main/menu.gd" id="4_w2lvb"]

[node name="Main" type="Node"]
script = ExtResource("1_leve3")

[node name="Game" type="Node2D" parent="."]

[node name="Level" type="Node2D" parent="Game"]

[node name="Level1" parent="Game/Level" instance=ExtResource("1_78gus")]

[node name="Turret" parent="Game" instance=ExtResource("1_1khyv")]
visible = false
position = Vector2(596, 720)

[node name="Projectiles" type="Node2D" parent="Game"]

[node name="HitTimer" type="Timer" parent="Game"]
wait_time = 5.0
one_shot = true

[node name="Menu" type="Control" parent="."]
process_mode = 3
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("4_w2lvb")

[node name="HomeMenu" type="Control" parent="Menu"]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="GameHud" type="Control" parent="Menu"]
layout_mode = 1
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="HBoxContainer" type="HBoxContainer" parent="Menu/GameHud"]
layout_mode = 1
offset_left = 310.0
offset_top = 5.0
offset_right = 406.0
offset_bottom = 50.0

[node name="Points" type="Label" parent="Menu/GameHud/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 30
text = "0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="PauseMenu" type="Control" parent="Menu"]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[connection signal="all_hexes_killed" from="Game/Level/Level1" to="." method="_on_level_1_all_hexes_killed"]
[connection signal="projectile_deleted" from="Game/Level/Level1" to="." method="_on_level_1_projectile_deleted"]
[connection signal="update_score" from="Game/Level/Level1" to="." method="_on_level_1_update_score"]
[connection signal="create_projectiles" from="Game/Turret" to="." method="_on_turret_create_projectiles"]
[connection signal="timeout" from="Game/HitTimer" to="." method="_on_hit_timer_timeout"]
